# SimpleTuner

./: .dockerignore  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  OPTIONS.md  README.es.md  README.hi.md  README.ja.md  README.md  README.pt-BR.md  README.pt-br.md  README.zh.md  TUTORIAL.md  analyze_aspect_ratios_json.py  base_config.yaml  caption_filter_list.example.txt  cog.yaml  configure.py  convert_checkpoint.py  convert_sd_checkpoint.py  convert_sdxl_checkpoint.py  create_symlinks_lora.sh  crop.py  dataset_from_csv.py  dataset_from_laion.py  docker-compose.yml  docker-start.sh  env.sh.example  files.tbz  filter_list.txt  inference.py  inference_comparison.py  inference_ddpm.py  (+30 more)
.github/workflows/: docs.yml  publish-pypi.yaml  push-replicate.yml  python-tests.yaml  webui-tests.yaml
config/: aura_config.env  caption_filter_list.txt.example  config.env  config.env.example  config.json.example  lycoris_config.json.example  multidatabackend-auraflow.json  multidatabackend-multiresolution.json.example  multidatabackend-sd3.json  multidatabackend.json.example  user_prompt_library.json.example  workspace
config/examples/: README.md  multidatabackend-controlnet-1024px.json  multidatabackend-controlnet-128px.json  multidatabackend-controlnet-512px.json  multidatabackend-reference-512px.json  multidatabackend-small-dreambooth-1024px.json  multidatabackend-small-dreambooth-512px.json  multidatabackend-small-video-480p.json
config/sd35_kanji1/: config.json  config.json~
docker/runpod-longcat/: Dockerfile  README.md  build_and_push.sh  entrypoint.sh
documentation/: CAPTIONFLOW.es.md  CAPTIONFLOW.hi.md  CAPTIONFLOW.ja.md  CAPTIONFLOW.md  CAPTIONFLOW.pt-BR.md  CAPTIONFLOW.zh.md  CONTROLNET.es.md  CONTROLNET.hi.md  CONTROLNET.ja.md  CONTROLNET.md  CONTROLNET.pt-BR.md  CONTROLNET.zh.md  DATALOADER.es.md  DATALOADER.hi.md  DATALOADER.ja.md  DATALOADER.md  DATALOADER.pt-BR.md  DATALOADER.zh.md  DEEPFLOYD.es.md  DEEPFLOYD.hi.md  DEEPFLOYD.ja.md  DEEPFLOYD.md  DEEPFLOYD.pt-BR.md  DEEPFLOYD.zh.md  DEEPSPEED.es.md  DEEPSPEED.hi.md  DEEPSPEED.ja.md  DEEPSPEED.md  DEEPSPEED.pt-BR.md  DEEPSPEED.zh.md  DISTRIBUTED.es.md  DISTRIBUTED.hi.md  DISTRIBUTED.ja.md  DISTRIBUTED.md  DISTRIBUTED.pt-BR.md  DISTRIBUTED.zh.md  DOCKER.es.md  DOCKER.hi.md  DOCKER.ja.md  DOCKER.md  (+95 more)
documentation/api/: TUTORIAL.es.md  TUTORIAL.hi.md  TUTORIAL.ja.md  TUTORIAL.md  TUTORIAL.pt-BR.md  TUTORIAL.zh.md  WEBHOOKS.es.md  WEBHOOKS.hi.md  WEBHOOKS.ja.md  WEBHOOKS.md  WEBHOOKS.pt-BR.md  WEBHOOKS.zh.md
documentation/attention/: FLEX.es.md  FLEX.hi.md  FLEX.ja.md  FLEX.md  FLEX.pt-BR.md  FLEX.zh.md  SLA.es.md  SLA.hi.md  SLA.ja.md  SLA.md  SLA.pt-BR.md  SLA.zh.md
documentation/data_presets/: README.es.md  README.hi.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  preset.es.md  preset.hi.md  preset.ja.md  preset.md  preset.pt-BR.md  preset.zh.md  preset_audio_dataset_with_lyrics.es.md  preset_audio_dataset_with_lyrics.hi.md  preset_audio_dataset_with_lyrics.ja.md  preset_audio_dataset_with_lyrics.md  preset_audio_dataset_with_lyrics.pt-BR.md  preset_audio_dataset_with_lyrics.zh.md  preset_dalle3.es.md  preset_dalle3.hi.md  preset_dalle3.ja.md  preset_dalle3.md  preset_dalle3.pt-br.md  preset_dalle3.zh.md  preset_midjourney.es.md  preset_midjourney.hi.md  preset_midjourney.ja.md  preset_midjourney.md  preset_midjourney.pt-BR.md  preset_midjourney.zh.md  preset_nijijourney.es.md  preset_nijijourney.hi.md  preset_nijijourney.ja.md  preset_nijijourney.md  preset_nijijourney.pt-BR.md  preset_nijijourney.zh.md  preset_pexels.es.md  preset_pexels.hi.md  preset_pexels.ja.md  preset_pexels.md  (+8 more)
documentation/development/: FACTORY_ARCHITECTURE.es.md  FACTORY_ARCHITECTURE.hi.md  FACTORY_ARCHITECTURE.ja.md  FACTORY_ARCHITECTURE.md  (+2 more)
helpers/: arguments.py  aspect_bucket.py  broken_images.py  custom_schedule.py  dreambooth_dataset.py  fake_encoder.py  files.py  image_tools.py  log_format.py  metadata.py  min_snr_gamma.py  model.py  multiaspect_dataset.py  prompt_dataset.py  prompts.py  sdxl_embeds.py  sdxl_save_hooks.py  state_tracker.py  vae_cache.py  vae_manager.py  validation.py
install/: install_cuda.sh
install/apple/: pyproject.toml
install/github/: pyproject.toml
install/rocm/: pyproject.toml
scripts/: deploy_cog.sh  export_boogu_pipelines.py  extract_adapter_common.py  extract_cosmos3_generator.py  extract_cosmos3_reasoner.py  extract_ideogram_text_projection.py  extract_lycoris_adapter.py  extract_model_metadata.py  extract_peft_lora.py  extract_sdnq_options.py  generate-webhook-documentation.py  generate_s2v_audio.py  infer_hidream_lora.py  krea2_vram_forward_bench.py  merge_safetensors.py  native_mm_bench.py  readme.md  te_fp8_bench.py  torchao_mre.py
simpletuner/: __init__.py  __main__.py  cli.py  cog.py  configure.py  inference.py  inference_comparison.py  lycoris_defaults.py  service_worker.py  train.py  train.sh  worker_agent.py
simpletuner_sdk/: api_state.py  configuration.py  interface.py  training_host.py
tests/: __init__.py  benchmark_factory.py  benchmark_factory_performance.py  benchmark_results.json  conftest.py  end_to_end.py  run_all_transformer_tests.py  run_by_category.py  run_factory_tests.py  run_process_keeper_tests.py  run_tests.py  selenium_support.py  sitecustomize.py  test_ace_step_attention.py  test_ace_step_model.py  test_ace_step_pipeline.py  test_ace_step_scheduler.py  test_ace_step_transformer_shapes.py  test_acestep_lora_targets.py  test_admin_panel.py  test_allow_empty_fields.py  test_alpine_interactions.py  test_anima_model.py  test_anyflow_lora_sidecar.py  test_api_integration.py  test_approval_workflow.py  test_assistant_lora.py  test_attention_backend.py  test_audio_backend_config.py  test_audio_collate.py  test_audio_fields.py  test_audio_sampler.py  test_auraflow_model.py  test_auth_providers.py  test_auth_routes.py  test_backend_builders.py  test_backend_config.py  test_batched_training_samples_video_resize.py  test_bbox_generator.py  test_bbox_interpolation.py  (+312 more)
toolkit/: README.md
(+2108 files in other folders)
