[tool.poetry]
name = "simpletuner"
version = "1.1.0"
description = "Stable Diffusion 2.x and XL tuner."
authors = ["bghira"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {version = "^2.7.1", source = "pytorch"}
torchvision = {version = "^0.22.1", source = "pytorch"}
diffusers = {git = "https://github.com/huggingface/diffusers"}
transformers = "^4.55.0"
datasets = "^3.0.1"
bitsandbytes = "^0.45.0"
wandb = "^0.21.0"
requests = "^2.32.4"
pillow = "^11.3.0"
opencv-python = "^4.10.0.84"
deepspeed = "^0.17.2"
accelerate = "^1.5.2"
safetensors = "^0.5.3"
compel = "^2.1.1"
clip-interrogator = "^0.6.0"
open-clip-torch = "^2.26.1"
iterutils = "^0.1.6"
scipy = "^1.11.1"
boto3 = "^1.35.83"
pandas = "^2.2.3"
botocore = "^1.35.83"
urllib3 = "<1.27"
torchaudio = "^2.4.1"
torchsde = "^0.2.6"
torchmetrics = "^1.1.1"
colorama = "^0.4.6"
numpy = "^2.2.0"
peft = "^0.16.0"
tensorboard = "^2.18.0"
triton = "^3.3.0"
sentencepiece = "^0.2.0"
optimum-quanto = "^0.2.7"
lycoris-lora = "^3.2.0.post2"
torch-optimi = "^0.2.1"
toml = "^0.10.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}
torchao = "^0.12.0"
lm-eval = "^0.4.4"
nvidia-cudnn-cu12 = "*"
nvidia-nccl-cu12 = "*"
atomicwrites = "^1.4.1"
beautifulsoup4 = "^4.12.3"
prodigy-plus-schedule-free = "^1.9.2"
tokenizers = "^0.21.0"
huggingface-hub = "^0.34.3"
imageio-ffmpeg = "^0.6.0"
imageio = {extras = ["pyav"], version = "^2.37.0"}
hf-xet = "^1.1.5"
peft-singlora = "^0.2.0"
trainingsample = "^0.1.0"

[tool.poetry.group.jxl.dependencies]
pillow-jxl-plugin = "^1.3.1"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "torch"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
priority = "supplemental"
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
