[tool.poetry]
name = "simpletuner"
version = "1.1.0"
description = "Stable Diffusion 2.x and XL tuner."
authors = ["bghira"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "2.7.0"
torchvision = "^0.22.0"
diffusers = "^0.34.0"
transformers = "^4.51.3"
datasets = "^3.0.0"
wandb = "^0.21.0"
requests = "^2.32.4"
pillow = "^11.3.0"
opencv-python = "^4.10.0.84"
accelerate = "^1.8.1"
safetensors = "^0.5.3"
compel = "^2.1.1"
clip-interrogator = "^0.6.0"
open-clip-torch = "^2.26.1"
iterutils = "^0.1.6"
scipy = "^1.11.1"
boto3 = "^1.35.83"
pandas = "^2.2.3"
botocore = "^1.35.83"
urllib3 = "<1.27"
torchsde = "^0.2.6"
torchmetrics = "^1.1.1"
colorama = "^0.4.6"
numpy = "^2.2.0"
peft = "^0.16.0"
tensorboard = "^2.18.0"
regex = "^2023.12.25"
huggingface-hub = "^0.30.2"
optimum-quanto = "^0.2.7"
torch-optimi = "^0.2.1"
lycoris-lora = "^3.2.0.post2"
fastapi = {extras = ["all"], version = "^0.115.12"}
deepspeed = "^0.17.2"
sentencepiece = "^0.2.0"
torchao = "^0.11.0"
torchaudio = "^2.7.0"
atomicwrites = "^1.4.1"
beautifulsoup4 = "^4.12.3"
prodigy-plus-schedule-free = "^1.9.2"
imageio-ffmpeg = "^0.6.0"
imageio = {extras = ["pyav"], version = "^2.37.0"}
aiohttp = "^3.11.18"
aiohappyeyeballs = "^2.6.1"
pytz = "^2025.2"
setuptools = "^79.0.1"
tzdata = "^2025.2"
pydantic = "^2.11.3"
hf-xet = "^1.1.5"
pydantic-settings = "^2.10.1"

[tool.poetry.group.jxl.dependencies]
pillow-jxl-plugin = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
priority = "supplemental"
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"

[[tool.poetry.source]]
priority = "supplemental"
name = "pytorch-test"
url = "https://download.pytorch.org/whl/test/cpu"
