[tool.poetry]
name = "simpletuner"
version = "1.1.0"
description = "Stable Diffusion 2.x and XL tuner."
authors = ["bghira"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = { "version" = ">=2.4.1", "source" = "pytorch" }
torchvision = "^0.19.0"
diffusers = "^0.30.3"
transformers = "^4.44.2"
datasets = "^3.0.0"
wandb = "^0.18.1"
requests = "^2.32.3"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
accelerate = "^0.34.2"
safetensors = "^0.4.5"
compel = "^2.0.1"
clip-interrogator = "^0.6.0"
open-clip-torch = "^2.26.1"
iterutils = "^0.1.6"
scipy = "^1.11.1"
boto3 = "^1.35.24"
pandas = "^2.2.3"
botocore = "^1.35.24"
urllib3 = "<1.27"
torchsde = "^0.2.5"
torchmetrics = "^1.1.1"
colorama = "^0.4.6"
numpy = "1.26"
peft = "^0.12.0"
tensorboard = "^2.17.1"
regex = "^2023.12.25"
huggingface-hub = "^0.23.3"
optimum-quanto = {git = "https://github.com/huggingface/optimum-quanto"}
torch-optimi = "^0.2.1"
lycoris-lora = {git = "https://github.com/kohakublueleaf/lycoris", rev = "dev"}
fastapi = {extras = ["standard"], version = "^0.115.0"}
deepspeed = "^0.15.1"
sentencepiece = "^0.2.0"
torchao = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
priority = "supplemental"
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[[tool.poetry.source]]
priority = "supplemental"
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
