[tool.poetry]
name = "simpletuner"
version = "1.1.0"
description = "Stable Diffusion 2.x and XL tuner."
authors = ["bghira"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {version = "^2.4.1+rocm6.0", source = "pytorch-rocm"}
torchaudio = {version = "^2.4.1+rocm6.0", source = "pytorch-rocm"}
torchmetrics = {version = "^1", source = "pytorch-rocm"}
torchvision = {version = "^0.19.1+rocm6.0", source = "pytorch-rocm"}
pytorch-triton-rocm = {version = "*", source = "pytorch-rocm"}
accelerate = "^1.2.1"
boto3 = "^1.35.83"
botocore = "^1.35.83"
clip-interrogator = "^0.6.0"
colorama = "^0.4.6"
compel = "^2"
datasets = "^3.0.0"
deepspeed = "^0.16.1"
diffusers = "^0.32.2"
iterutils = "^0.1.6"
numpy = "^2.2.0"
open-clip-torch = "^2.26.1"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
peft = "^0.14.0"
pillow = "^11.0.0"
requests = "^2.32.3"
safetensors = "^0.4.5"
scipy = "^1"
tensorboard = "^2.18.0"
torchsde = "^0.2.6"
transformers = "^4.49.0"
urllib3 = "<1.27"
wandb = "^0.19.1"
sentencepiece = "^0.2.0"
optimum-quanto = {git = "https://github.com/huggingface/optimum-quanto"}
lycoris-lora = {git = "https://github.com/kohakublueleaf/lycoris", rev = "dev"}
torch-optimi = "^0.2.1"
fastapi = {extras = ["standard"], version = "^0.115.0"}
bitsandbytes = "^0.44.1"
atomicwrites = "^1.4.1"
torchao = "^0.7.0"
beautifulsoup4 = "^4.12.3"
prodigy-plus-schedule-free = "^1.9.0"
huggingface-hub = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
priority = "explicit"
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.0"