[tool.poetry]
name = "simpletuner"
version = "1.1.0"
description = "Stable Diffusion 2.x and XL tuner."
authors = ["bghira"]
license = "AGPLv3"
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = { url = "https://download.pytorch.org/whl/rocm6.3/torch-2.7.0%2Brocm6.3-cp312-cp312-manylinux_2_28_x86_64.whl" }
torchvision = {version = "^0.22.0+rocm6.3", source = "pytorch-rocm"}
torchaudio = "*"
pytorch_triton_rocm = {version = "^3.3.0", source = "pytorch-rocm"}
accelerate = "^1.2.1"
boto3 = "^1.35.83"
botocore = "^1.35.83"
clip-interrogator = "^0.6.0"
colorama = "^0.4.6"
compel = "^2.1.1"
datasets = "^3.0.0"
deepspeed = "^0.17.2"
diffusers = "^0.34.0"
iterutils = "^0.1.6"
numpy = "^2.2.0"
open-clip-torch = "^2.26.1"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
peft = "^0.16.0"
pillow = "^11.3.0"
requests = "^2.32.4"
safetensors = "^0.5.3"
scipy = "^1"
tensorboard = "^2.18.0"
torchsde = "^0.2.6"
transformers = "^4.53.1"
urllib3 = "<1.27"
wandb = "^0.21.0"
sentencepiece = "^0.2.0"
optimum-quanto = "^0.2.7"
lycoris-lora = "^3.2.0.post2"
torch-optimi = "^0.2.1"
fastapi = {extras = ["standard"], version = "^0.115.0"}
atomicwrites = "^1.4.1"
torchao = "^0.11.0"
beautifulsoup4 = "^4.12.3"
prodigy-plus-schedule-free = "^1.9.2"
huggingface-hub = "^0.33.2"
imageio-ffmpeg = "^0.6.0"
imageio = {extras = ["pyav"], version = "^2.37.0"}
torchmetrics = "^1.7.1"
aiohttp = "^3.12.13"
peft-singlora = "^0.2.0"

[tool.poetry.group.jxl.dependencies]
pillow-jxl-plugin = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
# for newer poetry versions
#priority = "supplemental"
# for 1.3.1
secondary = true
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
